--- a/MobileStore/src/main/resources/application.properties
+++ b/MobileStore/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=MobileStore
 #Server Properties
 server.port=80
 #Database Configuration Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/thecoverhouse?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=tiger123
+spring.datasource.password=QtyFzjciSOKEyfWhtkGEZGIWmBleoNwK
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
